    * Options to control where you're redirected to after QuickPosting
    * Descriptions for stylesheets in the options window
    * Fix automatic pagination on the Active Messages list
    * Link to delete your posts from the message list
    * Remove custom quote templates
    * New CSS: Status icons (normal)
    * New CSS: Status icons (classic)
    * Access keys for QuickPost

2008-09-21:
    * version 0.6.6
    * Fix "new row" pagination
    * Alternate colors when removing topics/messages
    * Improve speed of character counters
    * Toolbar buttons
    * Move clutter to a GameFOX submenu in the context menu
    * Right click option to add or remove someone from a user highlighting
      group
    * Remove pre-signature field
    * Enforce the 160-character limit in signatures
    * Link to the last post of a topic in its "last post" column
    * Remove "GFCode for message body" quoting style
    * Show signature body in the drop down menu for selecting a sig

2008-08-23:
    * version 0.6.5
    * Option for removing Accounts list from context menu
    * Usable options window on smaller resolutions
    * Option to select random signature from most specific matching signatures
    * Option to disable page prefixes in the title
    * More reliable detection of the page type (topics/messages/etc)
    * Fix user highlighting and numbering in archived topics
    * Unlimited user highlighting groups
    * "Go to last post" double click action
    * Title and message character counts
    * New CSS: Classic GameFOX Sidebar
    * New CSS: Ricapar's Classic Theme
    * Some quoting fixes

2008-08-15:
    * version 0.6.4
    * Handle topic lists properly when automatic pagination is disabled
    * Treat detail.php as a message list
    * Fix double click quoting

2008-08-15:
    * version 0.6.3
    * More error handling with the CSS component
    * Split GameFOX stylesheets into multiple files