@@ -370,7 +370,8 @@
     .message a.name + span + a,
     .message a.name + span + span + a,
     .message a.name + br + br + a,
-    a.gamefox-delete-link {
+    a.gamefox-delete-link,
+    a.gamefox-filter-link {
         text-transform: capitalize;
     }
 
