@@ -19,6 +19,7 @@ pref("gamefox.elements.stopads", true);
 pref("gamefox.elements.aml.marknewposts", true);
 pref("gamefox.elements.aml.pagejumper", true);
 pref("gamefox.elements.deletelink", true);
+pref("gamefox.elements.filterlink", true);
 
 pref("gamefox.msgsPerPage", 50);
 pref("gamefox.tpcsPerPage", 50);
