@@ -21,6 +21,7 @@
     * New CSS: Status icons (normal)
     * New CSS: Status icons (classic)
     * Access keys for QuickPost
+    * Link to filter posts by user
 
 2008-09-21:
     * version 0.6.6
